adjusted javascript, updated some CSS elements, added HTML classes

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Java Quiz</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
 <body>
-    <nav>
+    <header>
         <h2 id="countdown"></h2>
-    </nav>
+    </header>
     
     <main>
         <div class="container" id="game">
